src/app/professionals/components/professional-list/professional-list.component.sass
.container
  width: 100%
  margin: 20px auto 0px

.new-prescription
  margin: 48%

.prescriptions
  width: 100%

.insurances
  width: 26%

.search-prescription
  width: 18%

.hidden-print
  visibility: hidden

.prescriptions-container
  display: flex
  flex-direction: column
  max-height: 50em
  min-width: 500px

.element-row
  position: relative

.element-row:not(.expanded)
  cursor: pointer

.element-row:not(.expanded):hover
  background: #f5f5f5


.element-row.expanded
  border-bottom-color: transparent

.cdk-column-expandedDetail
  border-left-style: solid
  border-color:#c9c9ca
  border-width: 1px
  margin-left: 24px
  outline: 1px
  outline-offset: -2px

